# CodeAgent

./: .claude_settings.json  .dockerignore  .env.example  .github_project.json  .gitignore  Dockerfile  PLAYWRIGHT_TEST_REPORT.md  README.md  SESSION_SUMMARY.md  SWAGGER_UI_TEST_REPORT.md  TEST_EXECUTION_SUMMARY.md  alembic.ini  app_spec.txt  create_test.py  docker-compose.override.yml  docker-compose.yml  gen.py  init.sh  pyproject.toml  requirements-dev.txt  requirements.txt  start_server.sh  test_fastapi_playwright.py  test_import.py  test_import_router.py  test_playwright.py  test_queue_integration.py  test_redis_connection.py  test_results.json  test_swagger_ui.py  test_webhook.py  test_webhook_payload.json
alembic/: env.py
alembic/versions/: a39eb78501fd_initial_schema_workflows_conversations_.py
config/: agent_definitions.yaml
src/agents/: __init__.py  base.py  claude_code_agent.py  claude_text_agent.py  registry.py
src/api/: deliberation.py  main.py  middleware.py  webhooks.py
src/config/: __init__.py  settings.py
src/database/: __init__.py  crud.py  engine.py  models.py
src/integrations/: __init__.py  github_client.py  llm_provider.py  result_poster.py
src/models/: __init__.py  agent.py  github.py  workflow.py
src/orchestration/: __init__.py  convergence.py  deliberation.py  moderator.py  recovery.py  synthesis.py  worker.py
src/queue/: __init__.py  base.py  factory.py  memory_queue.py  redis_queue.py
src/utils/: logging.py  validation.py  webhook.py
tests/: test_worker.py
tests/unit/: test_agent_definitions.py  test_agent_registry.py  test_claude_code_agent.py  test_convergence.py  test_database.py  test_deliberation.py  test_docker.py  test_github_client.py  test_health.py  test_llm_provider.py  test_logging.py  test_middleware.py  test_models.py  test_moderator.py  test_queue.py  test_recovery.py  test_result_poster.py  test_synthesis.py  test_validation.py  test_webhook.py
